# wit-bindgen-example

./: Cargo.toml  Makefile
guest/: Cargo.toml
guest/src/: lib.rs
guest2/: Cargo.toml
guest2/src/: lib.rs
host/: Cargo.toml  log
host/src/: main.rs
wits/: bindings.rs  say.wit
