[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
#wit-bindgen-wasmtime = { path = "../../wit-bindgen/crates/wasmtime" }
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git" }
#wasmtime-wasi = "*"
wasmtime-wasi = "0.35"
